--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 opencv-python-headless==4.5.5.64
 numpy==1.21.5
 scipy==1.4.1
-skimage==0.18.3
+scikit-image==0.18.3
 imutils==0.5.4
 streamlit==1.2.0
 streamlit-webrtc==0.35.1
